# pymagba

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  README.rst  asv.conf.json  pymagba.code-workspace  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: benchmark.yml  doc.yml  force-bench.yml  publish-benchmark.yml  publish.yml  python.yml  rust.yml  test.yml
benchmarks/: common.py  fields.py  magnets.py
docs/source/: _common_pose.rst  _common_source.rst  base.rst  conf.py  index.rst  magnets.rst  sensors.rst
pymagba/: __init__.py  field.py  fields.py  source.py  special.py  transform.py  util.py
python/benchmark/: __init__.py  test_cylinder.py  test_field_cylinder.py
python/pymagba/: __about__.py  __init__.py  __init__.pyi  base.py  currents.py  field.py  fields.py  magnets.py  sensors.py  source.py  sources.py  transform.py  util.py  utils.py
python/tests/: test_arraylike.py  test_bad_inputs.py  test_collection.py  test_cylinder.py  test_example.py  test_observer_collection.py  test_pickle.py  testing_util.py
results/: benchmarks.json
results/github-runner/: 04913b1e-virtualenv-py3.12-numpy-scipy.json  748f2df6-virtualenv-py3.12-numpy-scipy.json  962bed67-virtualenv-py3.12-numpy-scipy.json  bd0968c6-virtualenv-py3.12-numpy-scipy.json  c0b02f53-virtualenv-py3.12-numpy-scipy.json  machine.json
results/psira-arch/: 003510df-virtualenv-py3.12-numpy-scipy.json  00d5f828-virtualenv-py3.12-numpy-scipy.json  0115fd23-virtualenv-py3.12-numpy-scipy.json  022746ca-virtualenv-py3.12-numpy-scipy.json  032214fc-virtualenv-py3.12-numpy-scipy.json  03287787-virtualenv-py3.12-numpy-scipy.json  033cacbf-virtualenv-py3.12-numpy-scipy.json  04913b1e-virtualenv-py3.12-numpy-scipy.json  065a5af2-virtualenv-py3.12-numpy-scipy.json  0726fc8b-virtualenv-py3.12-numpy-scipy.json  08693a2b-virtualenv-py3.12-numpy-scipy.json  0ae48f2b-virtualenv-py3.12-numpy-scipy.json  0b31f828-virtualenv-py3.12-numpy-scipy.json  0b42abe3-virtualenv-py3.12-numpy-scipy.json  0b7e373e-virtualenv-py3.12-numpy-scipy.json  0c3857a1-virtualenv-py3.12-numpy-scipy.json  0d5b459c-virtualenv-py3.12-numpy-scipy.json  0d754edb-virtualenv-py3.12-numpy-scipy.json  0eab5f77-virtualenv-py3.12-magpylib-numpy-scipy.json  0eab5f77-virtualenv-py3.12-numpy-scipy.json  1003a290-virtualenv-py3.12-numpy-scipy.json  163b8f8e-virtualenv-py3.12-numpy-scipy.json  16fe18c2-virtualenv-py3.12-numpy-scipy.json  195df6ef-virtualenv-py3.12-numpy-scipy.json  1c982a86-virtualenv-py3.12-numpy-scipy.json  1d834124-virtualenv-py3.12-numpy-scipy.json  217eb76d-virtualenv-py3.12-magpylib-numpy-scipy.json  217eb76d-virtualenv-py3.12-numpy-scipy.json  222e8e8b-virtualenv-py3.12-numpy-scipy.json  22a074e1-virtualenv-py3.12-magpylib-numpy-scipy.json  22a074e1-virtualenv-py3.12-numpy-scipy.json  26178e99-virtualenv-py3.12-numpy-scipy.json  2798c939-virtualenv-py3.12-numpy-scipy.json  2852ea36-virtualenv-py3.12-numpy-scipy.json  2aedf01e-virtualenv-py3.12-numpy-scipy.json  2c24fd55-virtualenv-py3.12-numpy-scipy.json  2cecc401-virtualenv-py3.12-numpy-scipy.json  30797b5b-virtualenv-py3.12-numpy-scipy.json  324bc8f2-virtualenv-py3.12-numpy-scipy.json  (+128 more)
results/runnervm0kj6c/: machine.json  (+2 more)
src/: collection.rs  convert.rs  field.rs  fields.rs  lib.rs  macros.rs  special.rs  util.rs
tests/: __init__.py  test_collection.py  test_fields.py  test_special.py
(+80 files in other folders)
