[package]
name = "pymagba_binding"
version = "0.3.0+build.1"
edition = "2021"

[lib]
name = "pymagba_binding"
crate-type = ["cdylib"]


[dependencies]
magba = { version = "0.3.0" }
nalgebra = "0.34.1"
ndarray = "0.16.1"
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = [
    "extension-module",
    "multiple-pymethods",
] }
