[package]
name = "pymagba_binding"
version = "0.4.0"
edition = "2021"
authors = ["Sira Pornsiriprasert <code@psira.me>"]
description = "Rust-to-Python binding for PyMagba"

homepage = "https://github.com/p-sira/pymagba"
repository = "https://github.com/p-sira/pymagba"
readme = "README.md"
license = "BSD-3-Clause"

include = ["/src", "/LICENSE"]

[lib]
name = "pymagba_binding"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
magba = "0.4.3"
nalgebra = "0.34.1"
ndarray = "0.17.2"
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["multiple-pymethods"] }
pyo3-stub-gen = { version = "0.19.0", optional = true }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
stub-gen = ["dep:pyo3-stub-gen"]
