[project]
name = "pymagba"
description = "Performant magnetic computation powered by Rust"
authors = [{ name = "Sira Pornsiriprasert", email = "code@psira.me" }]
maintainers = [{ name = "Sira Pornsiriprasert", email = "code@psira.me" }]

dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = ["scipy>=1.16.2"]


[tool.maturin]
python-source = "python"
module-name = "pymagba.pymagba_binding"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "magpylib>=5.1.1",
    "maturin>=1.12.6",
    "patchelf>=0.17.2.4",
    "pip-tools>=7.5.3",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "mypy>=1.11.2",
    "asv>=0.6.5",
]
docs = [
    "sphinx>=8.2.3",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinxcontrib-napoleon>=0.7",
    "myst-parser>=4.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = """
--benchmark-autosave
--benchmark-storage=.benchmarks
"""
